sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:19: error: compt is already defined as variable compt
    var compt= 0
        ^